Changes to be committed: 	modified:   Makefile 	modified:   cmd/app/main.go 	modified:   internal/handlers/taskHandlers.go 	new file:   internal/handlers/userHandlers.go 	modified:   internal/taskService/repository.go 	new file:   internal/userService/orm.go 	new file:   internal/userService/repository.go 	new file:   internal/userService/service.go 	new file:   internal/web/users/api.gen.go 	modified:   migrations/20241217121439_migrate.down.sql 	modified:   migrations/20241217121439_migrate.up.sql 	modified:   openapi/openapi.yaml
