# openapi/openapi.yaml
@@ -77,6 +77,80 @@ paths:
       responses:
         '204':
           description: No content, the task has been deleted.
+  /users:
+    get:
+      summary: Get all Users
+      tags:
+        - users
+      responses:
+        '200':
+          description: A list of users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Users'
+    post:
+      summary: Create a new user
+      tags:
+        - users
+      requestBody:
+        description: The user to create
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Users'
+      responses:
+        '201':
+          description: The created user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Users'
+  /users/{id}:
+    patch:
+      summary: Updates the user
+      tags:
+        - users
+      parameters:
+        - name: id
+          in: path
+          description: The User ID
+          required: true
+          schema:
+            type: integer
+            format: uint
+      requestBody:
+        description: The updated user
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Users'
+      responses:
+        '200':
+          description: The updated user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Users'
+    delete:
+      summary: Deletes the User
+      tags:
+        - users
+      parameters:
+        - name: id
+          in: path
+          description: The user ID
+          required: true
+          schema:
+            type: integer
+            format: uint
+      responses:
+        '204':
+          description: No content, this user has been deleted.
          
 components:
   schemas:
@@ -90,3 +164,14 @@ components:
           type: string
         is_done:
           type: boolean
+
+    Users:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: uint # так как в БД айди это только положительные числа.
+        email:
+          type: string
+        password:
+          type: string
